implemented better solution